--- a/src/views/_product-card.html
+++ b/src/views/_product-card.html
@@ -2,16 +2,16 @@
 <div class="product card">
     <div class="card-body d-flex flex-row">
         <div class="ms-3">
-            <h5 class="card-title mb-0">{{ product.name }}</h5>
+            <h5 class="card-title mb-0">{{ product.nombre }}</h5>
             <p class="card-text">
-                <small class="text-muted">{{ product.type }}</small>
+                <small class="text-muted">{{ product.categoria.nombre }}</small>
             </p>
 
-            <p class="fs-3">$ {{ product.price }}</p>
+            <p class="fs-3">$ {{ product.precio }}</p>
 
             <p class="card-text">
                 {% if product.description != null %}
-                <small class="text" data-testid="description">{{ product.description }}</small>
+                <small class="text" data-testid="description">{{ product.detalle }}</small>
                 {% endif %}
             </p>
         </div>
