Add: se agregó la cabecera del html y se modificó base para vincularlas

--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -23,6 +23,10 @@
     <!-- /build -->
 </head>
 
+<header>
+    {% include "_header.html" %}
+</header>
+
 <body class="app">
     <main class="container">
         {% block main %} {% endblock %}
