--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -24,6 +24,9 @@
 </head>
 
 <body class="app">
+    <header>
+        {% include "search.html" %}
+    </header>
     <main class="container">
         {% block main %} {% endblock %}
     </main>
