--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -33,3 +33,16 @@ body {
 .filter select{
     width: 15rem ;
 }
+
+.ui-search-rescue__icon {
+    display: inline-block;
+    margin-right: 35px;
+    margin-top: -8px;
+    vertical-align: middle;
+}
+.ui-search-rescue__list {
+    font-size: 16px;
+    font-weight: 300;
+    margin: 18px 10px 10px 0;
+  }
+ 
