Change: se realizaron los cambios para la integración con search en el header y se elimino search.html

--- a/src/views/_header.html
+++ b/src/views/_header.html
@@ -6,9 +6,20 @@
 </style>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-opacity-75 bg-gradient">
-    <div class="container">
+    <div class="container" style="display: flex; justify-content: space-between;">
         <h1 style="font-size: 2rem;">rentAR</h1>
-        <p style="color: white; margin-top: 1.5rem; font-family: 'Montserrat', sans-serif;">Acá va el buscador</p>
-        <button onclick='window.location.href = "/formulario" ' class="btn btn-light ml-auto">Publicar producto</button>
+        <form action="/_header" method="get" class="form-search w-50">
+            <div class="input-group" style="max-width: 500px;">
+                <input 
+                    type="text"
+                    class="form-control" 
+                    placeholder="Buscar productos y servicios por nombre" 
+                    name="product_name"
+                    aria-label="Buscar productos por nombre" 
+                    aria-describedby="button-search">
+                <button class="btn btn-outline-secondary" type="submit" id="button-search" style="background-color: #343a40; color: #ffffff;">Buscar</button>
+            </div>
+        </form>
+        <button onclick='window.location.href = "/formulario" ' class="btn btn-light ml-auto" style="font-size: 1.0rem; padding: 0.50rem 1.0rem;">Publicar producto</button>
     </div>
 </nav>
