fix: se arrega el footer

--- a/src/views/_footer.html
+++ b/src/views/_footer.html
@@ -1,13 +1,15 @@
-<div class="navbar navbar-expand-lg navbar-dark bg-primary bg-opacity-75 bg-gradient">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-opacity-75 bg-gradient">
         <div class="container">
-                <strong> Shopp </strong>
+                <strong> rentAR </strong>
                 <p style="color: white ;margin-top: 1.5rem;; font-family: 'Montserrat', sans-serif;">¿Como contactarnos?
                 </p>
                 <p style="color: white ;margin-top: 1.5rem;font-family: 'Montserrat', sans-serif;"><i
-                                class="fa-solid fa-phone"></i> Telefono: +54 221 6650214</p>
+                                class="fa-solid fa-phone"></i> Telefono: +54 221 987654</p>
                 <p style="color: white ;margin-top: 1.5rem;font-family: 'Montserrat', sans-serif;"><i
-                                class="fa-solid fa-house"></i> Domicilio: Calle Falsa 123</p>
+                                class="fa-solid fa-house"></i> Oficina: Calle Falsa 123</p>
                 <p style="color: white ;margin-top: 1.5rem;font-family: 'Montserrat', sans-serif;"><i
-                                class="fa-solid fa-envelope"></i> Email: theShoop@gmail.com</p>
+                                class="fa-solid fa-envelope"></i> Email: info@rentAR.com</p>
         </div>
-</div>
+</nav>
+
+
