--- a/src/views/_product-card.html
+++ b/src/views/_product-card.html
@@ -20,7 +20,7 @@
             <!-- Si tiene definido CartProduct quiere decir que estamos en el carrito -->
             <form action="/cart" method="POST">
                 <input type="text" class="d-none" name="productid" value="{{ product.id }}">
-                <button type="submit" class="btn btn-outline-dark">Agregar a carrito</button>
+                <button type="submit" class="btn btn-outline-dark">Me interesa</button>
             </form>
         </div>
     </div>
