style: Se cambia la clase container para que este centrada y no utilize todo el ancho

--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -25,7 +25,7 @@
 
 <body class="app">
   
-    <main id="content-wrap" class="container-fluid">
+    <main id="content-wrap" class="container">
         {% block main %} {% endblock %}
     </main>
 
