feat: Agrego el logo al header y agrego cambios esteticos

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -5,6 +5,9 @@
 body {
     background-color: var(--bs-gray-400);
 }
+.navbar {
+    background-color: #000000;
+}
 
 .navbar-brand {
     font-family: 'Macondo', 'Montserrat', sans-serif;
