--- a/src/views/_header.html
+++ b/src/views/_header.html
@@ -5,19 +5,21 @@
     }
 </style>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-opacity-75 bg-gradient">
-    <div class="container" style="display: flex; justify-content: space-between;">
-        <h1 style="font-size: 2rem;">rentAR</h1>
-        <form action="/_header" method="get" class="form-search w-50">
-            <div class="input-group" style="max-width: 500px;">
-                <input 
+<nav class="navbar navbar-expand-lg py-3">
+    <div class="container">
+        <a class="navbar-brand" href="/">
+            <img src="Logov3.png" alt="Logo de rentAR" width="100" height="auto">
+        </a>
+        <form action="/_header" method="get" class="form-search flex-grow-1 mx-3">
+            <div class="input-group">
+                <input
                     type="text"
-                    class="form-control" 
-                    placeholder="Buscar productos y servicios por nombre" 
+                    class="form-control"
+                    placeholder="Buscar productos y servicios por nombre"
                     name="product_name"
-                    aria-label="Buscar productos por nombre" 
+                    aria-label="Buscar productos por nombre"
                     aria-describedby="button-search">
-                <button class="btn btn-outline-secondary" type="submit" id="button-search" style="background-color: #343a40; color: #ffffff;">Buscar</button>
+                <button class="btn btn-outline-secondary" type="submit" id="button-search" style= " color: #ffffff;">Buscar</button>
             </div>
         </form>
         <button onclick='window.location.href = "/formulario" ' class="btn btn-light ml-auto" style="font-size: 1.0rem; padding: 0.50rem 1.0rem;">Publicar producto</button>
