Refactor: se solucionan problemas del merge

--- a/src/views/_header.html
+++ b/src/views/_header.html
@@ -15,7 +15,7 @@
                 <input
                     type="text"
                     class="form-control"
-                    placeholder="Buscar productos y servicios por nombre"
+                    placeholder="Buscar productos por nombre"
                     name="product_name"
                     aria-label="Buscar productos por nombre"
                     aria-describedby="button-search">
