--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Montserrat:wght@400;700&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
     <!-- /build -->
 </head>
 
