--- a/src/views/_header.html
+++ b/src/views/_header.html
@@ -7,7 +7,7 @@
 
 <nav class="navbar navbar-expand-lg py-3">
     <div class="container">
-        <div class="navbar-brand" href="/">
+        <div class="navbar-brand" onclick="window.location.href = '/'">
             <img src="/Logov3.png" alt="Logo de rentAR" width="100" height="auto">
         </div>
         <form action="/_header" method="get" class="form-search flex-grow-1 mx-3">
