--- a/src/views/_product_details.html
+++ b/src/views/_product_details.html
@@ -2,12 +2,10 @@
 <!-- Falta agregar el nav bar del header -y corregir las posiciones esteticas de los productos-->
 
 {% block main %}
-<div class="container">
-    <div class="row">
+<div class="container mt-4">
         <div class="col">
             <h1>Detalles del Producto</h1>
         </div>
-    </div>
     <div class="row mt-4">
         <div class="col-md-4 d-flex justify-content-center">
 
