add: Agrego select2 y jquery

--- a/src/views/_base.html
+++ b/src/views/_base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Montserrat:wght@400;700&display=swap"
@@ -28,7 +28,7 @@
 </header>
 
 <body class="app">
-  
+
     <main id="content-wrap" class="container">
         {% block main %} {% endblock %}
     </main>
@@ -59,4 +59,13 @@
         padding-bottom: 2.5rem;    /* Footer height */
     }
 </style>
+
+<script src="/jquery/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+
+<script>
+ $(document).ready(function (){
+ })
+</script>
 </html>
