fix: Se repone un campo borrado

--- a/src/views/formulario.html
+++ b/src/views/formulario.html
@@ -22,6 +22,10 @@
                         <i class="fa-regular fa-user"></i>
                         <input type="text" name="nombre" placeholder="Nombre">
                     </div>
+                    <div class="input-field">
+                        <i class="fa-solid fa-bars"></i>
+                        <input type="text" name="categoria_id" placeholder="Categoria">
+                    </div>
                     <div class="input-field" style="display: flex; align-items: center;">
                         <div style="flex: 1;">
                             <select class="select2 select2-dropdown select" name="moneda_id" style="width: 100%; border: none; outline: none; margin-right: 2px">
