--- a/src/views/_footer.html
+++ b/src/views/_footer.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-opacity-75 bg-gradient">
+<nav class="navbar navbar-expand-lg navbar-dark  bg-opacity-75 bg-gradient">
         <div class="container">
-                <strong> rentAR </strong>
+                <strong style="color: #ced4da"> rentAR </strong>
                 <p style="color: white ;margin-top: 1.5rem;; font-family: 'Montserrat', sans-serif;">¿Como contactarnos?
                 </p>
                 <p style="color: white ;margin-top: 1.5rem;font-family: 'Montserrat', sans-serif;"><i
