Add: se añadieron alertas y la notificacion de que se creo el producto

--- a/src/views/_header.html
+++ b/src/views/_header.html
@@ -1,6 +1,6 @@
 <style>
     .btn:hover {
-        background-color: #007bff;
+        background-color: #6982E8;
         color: white;
     }
 </style>
