--- a/src/views/formulario.html
+++ b/src/views/formulario.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <!--<script src="script.js"></script>-->
     <div class="container">
         <div class="form-content">
             <h1 id="title">Publicar producto</h1>
@@ -44,13 +43,64 @@
                 </div>
                 <br>
                 <div class="btn-field">
-                    <button id="cancel" type="button">Cancelar</button>
+                    <button id="cancel" type="button" style="background-color: #d33;">Cancelar</button>
                     <button id="post" type="submit">Publicar</button>
                 </div>
             </form>
         </div>
     </div>
-</body>
+    
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+    <script>
+        document.querySelector('form').addEventListener('submit', function(event){
+            event.preventDefault();
+        
+            Swal.fire({
+                title: '¿Desea publicar el producto?',
+                showDenyButton: true,
+                confirmButtonColor: '#6982E8',
+                confirmButtonText: 'Confirmar',
+                denyButtonText: 'Cerrar',
+                reverseButtons: true,
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    Swal.fire({
+                        title: '¡Usted ha publicado su producto!',
+                        icon: 'success',
+                        showConfirmButton: false,
+                        timer: 1200,
+                    }).then(() => {
+                        event.target.submit();
+                    });
+                };
+            });
+        }); 
+    </script>
+
+    <script>
+        document.querySelector('#cancel').addEventListener('click', function(event) {
+            Swal.fire({
+                title: '¿Estás seguro de que quiere abandonar el lugar?',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#d33',
+                cancelButtonColor: '#6982E8',
+                confirmButtonText: 'Sí, cancelar',
+                cancelButtonText: 'No, seguir aquí',
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    Swal.fire(
+                        '¡Cancelada!',
+                        'La operación ha sido cancelada.',
+                        'success'
+                    ).then(() => {
+                        window.location.href = '/';
+                    });
+                }
+            });
+        });
+    </script>
+</body>
 
 </html>
