--- a/src/static/css/formstyle.css
+++ b/src/static/css/formstyle.css
@@ -7,6 +7,7 @@
 }
 
 .container{
+    margin-top: 8px;
     width: 100%;
     height: 100vh;
     background-color: #ced4da;
@@ -16,8 +17,11 @@
 }
 
 .form-content{
-    width: 80%;
-    max-width: 360px;
+    position: relative;
+    z-index: 2;
+    /*width: 60%;*/
+    min-width: 500px;
+    max-width: 500px;
     background-color: #1A2234;
     padding: 20px 20px 20px;
     text-align: center;
@@ -73,6 +77,7 @@ input{
     outline: none;
     padding: 10px 15px;
     color: #FFFFFF;
+    text-align: left;
 }
 
 input::placeholder{
@@ -82,6 +87,15 @@ input::placeholder{
 .input-field i{
     margin-left: 15px;
     color: #6982E8;
+}
+
+input[name='precio'], input[name='nombre']{
+    font-size: 15px;
+    width: 100% !important;
+}
+
+.small-input{
+    width: 32% !important;
 }
 
 form p{
@@ -96,11 +110,12 @@ form p a{
 }
 
 .btn-field{
+    margin-top: 20px;
     width: 100%;
     display: flex;
     justify-content: center;
     position: relative;
-    top: -15px;
+    top: -10px;
 }
 
 .btn-field button{
@@ -120,5 +135,5 @@ form p a{
 }
 
 .input-group{
-    height: 220px;
+    min-height: 300px;
 }
