--- a/src/views/_header.html
+++ b/src/views/_header.html
@@ -5,7 +5,7 @@
     }
 </style>
 
-<nav class="navbar navbar-expand-lg py-3">
+<nav class="navbar bg-gradient bg-opacity-75 py-3">
     <div class="container">
         <div class="navbar-brand" onclick="window.location.href = '/'">
             <img src="/Logov3.png" alt="Logo de rentAR" width="100" height="auto">
