--- a/src/static/css/formstyle.css
+++ b/src/static/css/formstyle.css
@@ -1,27 +1,16 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
-    text-decoration: none;
-}
-
-.container{
-    margin-top: 8px;
+#containerPost{
+    margin-top: 10px;
+    margin-bottom: 10px;
     width: 100%;
-    height: 100vh;
-    background-color: #ced4da;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .form-content{
+    width: 60%;
     position: relative;
-    z-index: 2;
-    /*width: 60%;*/
-    min-width: 500px;
-    max-width: 500px;
     background-color: #1A2234;
     padding: 20px 20px 20px;
     text-align: center;
@@ -29,7 +18,7 @@
 }
 
 .form-content h1{
-    font-size: 30px;
+    font-size: 38px;
     margin-bottom: 60px;
     color: #FFFFFF;
     position: relative;
@@ -55,10 +44,10 @@
     align-items: center;
     transition: max-height 0.5s;
     overflow: hidden;
+    flex-wrap: wrap;
 }
 
 .input-field select{
-    width: 25%;
     background-color: #828A97;
     color: #FFFFFF;
     border: none;
@@ -66,12 +55,8 @@
     outline: none;
 }
 
-.input-field select option{
-    color: #828A97;
-}
-
 input{
-    width: 100%;
+    width: 80%;
     background: transparent;
     border: 0;
     outline: none;
@@ -87,26 +72,6 @@ input::placeholder{
 .input-field i{
     margin-left: 15px;
     color: #6982E8;
-}
-
-input[name='precio'], input[name='nombre']{
-    font-size: 15px;
-    width: 100% !important;
-}
-
-.small-input{
-    width: 32% !important;
-}
-
-form p{
-    color: #FFFFFF;
-    text-align: left;
-    font-size: 13px;
-}
-
-form p a{
-    color: #6982E8;
-    margin-left: 5px;
 }
 
 .btn-field{
@@ -134,6 +99,10 @@ form p a{
     margin-right: 10px;
 }
 
-.input-group{
-    min-height: 300px;
+#categoriaInput, #localidadInput{
+    padding: 8px 8px;
+}
+
+#inputPost{
+    flex-direction: column;
 }
