Style: se oculta botón de publicar producto del header en el formulario

--- a/src/static/css/formstyle.css
+++ b/src/static/css/formstyle.css
@@ -106,3 +106,8 @@ input::placeholder{
 #inputPost{
     flex-direction: column;
 }
+
+#button-publicar{
+    /*display: hide; Para eliminar el botón*/
+    visibility: hidden;
+}
