--- a/src/views/_product-card.html
+++ b/src/views/_product-card.html
@@ -1,6 +1,6 @@
 {% macro productCard(product) %}
 <div class="product card">
-    <div class="card-body d-flex flex-row">
+    <div class="card-body d-flex flex-row justify-content-between">
         <div class="ms-3">
             <h5 class="card-title mb-0">{{ product.nombre }}</h5>
             <p class="card-text">
@@ -16,13 +16,63 @@
             </p>
         </div>
 
-        <div class="flex-grow-1 d-flex align-items-center justify-content-end">
-            <!-- Si tiene definido CartProduct quiere decir que estamos en el carrito -->
-            <form action="product/details/{{ product.id }}" method="GET">
-                <input type="text" class="d-none" name="productid" value="{{ product.id }}">
-                <button type="submit" class="btn btn-outline-dark">Me interesa</button>
-            </form>
+        <div class="flex-grow-1 d-flex align-items-center justify-content-end ">
+            <div class="col-sm-2">
+                <!-- Si tiene definido CartProduct quiere decir que estamos en el carrito -->
+                <form action="product/details/{{ product.id }}" method="GET">
+                    <input type="text" class="d-none" name="productid" value="{{ product.id }}">
+                    <button type="submit" class="btn btn-outline-dark mb-2">Me interesa</button>
+                </form>
+                <!-- Boton para eliminar un producto-->
+                <form action="product/eliminar/{{ product.id }}" method="GET" id="btnEliminar">
+                    <input type="text" class="d-none" name="productidE" value="{{ product.id }}">
+                    <button type="button" class="btn btn-outline-danger mb-2">Eliminar</button>
+                </form>
+            </div>
         </div>
     </div>
 </div>
+
+<script>
+    document.getElementById('btnEliminar').addEventListener('submit', function (event) {
+        event.preventDefault();
+        Swal.fire({
+            title: '¿Estás seguro de que quiere eliminar este producto?',
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#d33',
+            cancelButtonColor: '#6982E8',
+            confirmButtonText: 'Confirmar',
+            cancelButtonText: 'Cerrar',
+        }).then((result) => {
+            if (result.isConfirmed) {
+                Swal.fire(
+                    '¡Eliminado!',
+                    'La operación ha sido realizada.',
+                    'success'
+                ).then(() => {
+                    window.location.href = '/';
+                });
+            }
+        });
+    });
+</script>
+
+<!--script>
+    $('.select2').select2({
+        minimumResultsForSearch: Infinity,
+    }).on('select2:select', function () {
+        $(this).trigger('blur');
+    });
+
+    $('.select2-no-search').select2().on('select2:select', function () {
+        $(this).trigger('blur');
+    });
+</script -->
 {% endmacro %}
+
+{% block js %}
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+{% endblock %}
