--- a/src/views/_product_details.html
+++ b/src/views/_product_details.html
@@ -133,6 +133,13 @@
         <div class="col p-3 d-flex justify-content-start">
             <a href="/" class="btn btn-primary"><i class="fa-solid fa-arrow-left fa-bounce"></i>    Volver</a>
         </div>
+        <div class="col p-3 d-flex justify-content-center">
+            <form action="/mensajeria/{{ product.id }}" method="GET">
+                <button type="submit" class="btn btn-primary">
+                    <i class="fab fa-facebook-messenger"></i> Enviar mensaje
+                </button>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
