--- a/src/views/formulario.html
+++ b/src/views/formulario.html
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     <br>
-                    <input type="file" id="urlImagen" name="image">
+                    <input type="file" id="urlImagen" name="urlImagen">
                     
                     <!--<div class="input-field" style="width: 100%; height: 100px; display: flex; justify-content: center; align-items: center;">
                         <input type="file" id="urlImagen" name="image" style="display: none;"><br>
