Change: se modifico product_details para visualizar la imagen cargada del producto en el detalle

--- a/src/views/_product_details.html
+++ b/src/views/_product_details.html
@@ -89,8 +89,7 @@
         </div>
     <div class="row mt-4">
         <div class="col-md-4 d-flex justify-content-center">
-            <img src="/no-image.jpg" alt="Imagen de {{ product.nombre }}" width="200px" height="200px" class="rounded border b-2"
-                 loading="async" />
+            <img src="{{ product.urlImagen }}" alt="Imagen de {{ product.nombre }}" width="200px" height="200px" class="rounded border b-2" loading="async" />
         </div>
         <div class="col-md-8">
             <div class="row row-detalle">
