--- a/src/views/_product-card.html
+++ b/src/views/_product-card.html
@@ -1,6 +1,13 @@
 {% macro productCard(product) %}
 <div class="product card">
-    <div class="card-body d-flex flex-row justify-content-between">
+    <div class="card-body d-flex flex-row justify-content-between align-items: center">
+        <p>
+            {% if product.urlImagen %}
+                <img src="{{ product.urlImagen }}" alt="Imagen de {{ product.nombre }}" width="144px" height="144px" small class="rounded border b-2 float-start" loading="async" />
+            {% else %}
+                <img src="/no-image.jpg" alt="Imagen de {{ product.nombre }}" width="144px" height="144px" class="rounded border b-2 float-start" loading="async" onerror="this.onerror=null; this.src='/no-image.jpg';"/>
+            {% endif %}
+        </p>
         <div class="ms-3">
             <h5 class="card-title mb-0">{{ product.nombre }}</h5>
             <p class="card-text">
