--- a/src/views/_header.html
+++ b/src/views/_header.html
@@ -22,6 +22,7 @@
                 <button class="btn btn-outline-secondary" type="submit" id="button-search" style= " color: #ffffff;">Buscar</button>
             </div>
         </form>
-        <button onclick='window.location.href = "/formulario" ' class="btn btn-light ml-auto" id="button-publicar" style="font-size: 1.0rem; padding: 0.50rem 1.0rem;">Publicar producto</button>
+        <button onclick='window.location.href = "/formulario" ' class="btn btn-light ml-auto" id="button-publicar" style="font-size: 1.0rem; padding: 0.50rem 1.0rem; margin-right: 10px;">Publicar producto</button>
+        <button onclick='window.location.href = "/my_products" ' class="btn btn-light ml-auto" id="button-list" style="font-size: 1.0rem; padding: 0.50rem 1.0rem;">Mis productos</button>
     </div>
 </nav>
