--- a/src/views/_my_products.html
+++ b/src/views/_my_products.html
@@ -1,2 +1,13 @@
-<h1>Acá va la lista de productos</h1>
+{% extends "_base.html" %}
+{% import "_product-card.html" as productCard %}
+
+
+{% block main %}
+    <div class="my products" style="margin-top: 12px;">
+        <!--<h2>Acá va la lista de productos</h2>-->
+        {% for product in products %}
+            {{ productCard.productCard(product) }}
+        {% endfor %}
+    </div>
+{% endblock %}
 
