feat: Se agrega el registro e inicio de sesion

--- a/src/static/css/formstyle.css
+++ b/src/static/css/formstyle.css
@@ -99,7 +99,7 @@ input::placeholder{
     margin-right: 10px;
 }
 
-#categoriaInput, #localidadInput{
+#categoriaInput, #localidadInput, #municipioInput{
     padding: 8px 8px;
 }
 
