Change: se realizaron cambios con respecto a los botones y en una redireccion

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -51,4 +51,8 @@ body {
 .ui-search-rescue__list {
     font-size: 16px;
     margin: 18px 10px 10px 0;
- }
+}
+
+#btnDelete{
+    display: none;
+}
