--- a/src/views/_my_products.html
+++ b/src/views/_my_products.html
@@ -11,3 +11,15 @@
     </div>
 {% endblock %}
 
+{% block css %} 
+<style>
+    #interestButton{
+        display: none;
+    }
+    #btnDelete{
+        display: block;
+    }
+</style>
+{%endblock%}
+
+
